--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,6 +1,6 @@
 @import 'node_modules/bootstrap/scss/bootstrap';
 
 
-.router-link-active {
+.router-link-active.router-link-exact-active.nav-link {
     color: red
 }
